[package]
name = "swc-test-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "0.23.24", features = ["ecma_visit", "ecma_ast", "plugin_transform"] }
string_cache = "0.8"
convert_case = "0.6.0"


[dev-dependencies]
swc_core = { version = "0.23.24", features = ["ecma_parser"] }
swc_ecma_parser = "0.124.5"

[profile.release]
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
